hiding stat in front and fixed the not showing question when clicked restart button

--- a/style.css
+++ b/style.css
@@ -110,3 +110,7 @@ display: none;
 #stat-submit:hover{
     background-color: rgb(153, 154, 219);
 }
+
+.details {
+    display: none ;
+}
